make index update function with sclearn tfidf vectorizer (for now only create index but not update)

--- a/analyzer.ipynb
+++ b/analyzer.ipynb
@@ -64,7 +64,7 @@
     "    Analyzer provide stemm, tokenize and lang detect workflow\n",
     "    \n",
     "    Receive: list of lists of textes\n",
-    "    Return: list of lists of stemmed tokens for each document + languages\n",
+    "    Return: list of stemmed textes + languages\n",
     "    \"\"\"\n",
     "    if request.method=='POST':\n",
     "        data = request.json\n",
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
