--- a/updater.ipynb
+++ b/updater.ipynb
@@ -30,14 +30,17 @@
     }
    ],
    "source": [
+    "import json\n",
+    "\n",
+    "import requests\n",
+    "\n",
     "from flask import Flask\n",
     "from flask import request\n",
-    "import json\n",
-    "import requests\n",
     "\n",
     "from paper import index\n",
     "from paper.utils import post_request\n",
-    "from paper.config import *\n",
+    "from paper.config import UPDATER_PATH, UPDATER_PORT\n",
+    "from paper.config import ANALYZER_PATH, ANALYZER_PORT\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
@@ -51,14 +54,18 @@
     "    if request.method == 'POST':\n",
     "        data = request.json\n",
     "        docs = data[\"docs\"]\n",
+    "        \n",
     "        # add title text to textes\n",
     "        textes = [item['title'] + ' ' + item['text'] for item in docs]\n",
     "        analyze_json = {'textes': textes}\n",
     "        r_analyzing_docs = post_request(ANALYZER_PORT, ANALYZER_PATH, analyze_json)\n",
     "        stemmed_docs = r_analyzing_docs['stemmed_docs']\n",
     "        langs = r_analyzing_docs['langs']\n",
-    " \n",
-    "        ids_of_updated = index.update_index(docs, stemmed_docs)\n",
+    "        \n",
+    "        for doc, stemmed in zip(docs, stemmed_docs):\n",
+    "            doc['stemmed_text'] = stemmed\n",
+    "            \n",
+    "        ids_of_updated = index.update_index(docs)\n",
     "        \n",
     "        return json.dumps({'status':'ok', \"ids\": ids_of_updated})\n",
     "    else:\n",
@@ -96,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
