--- a/stemmer.ipynb
+++ b/stemmer.ipynb
@@ -62,14 +62,16 @@
     "@app.route(STEMMER_PATH, methods=['GET','POST'])\n",
     "def stemmer():\n",
     "    \"\"\"\n",
-    "    Receive: text document and language\n",
-    "    Return: list of stemmed tokens for document\n",
+    "    Receive: text documents and languages\n",
+    "    Return: list of lists of stemmed tokens for documents\n",
     "    \"\"\"\n",
     "    if request.method=='POST':\n",
     "        data = request.json\n",
     "        textes = data[\"textes\"]\n",
     "        langs = data[\"langs\"]\n",
     "        \n",
+    "        stemmed = [normalize_and_stemm(text, lang) for text, lang \n",
+    "                   in zip(textes, langs)]\n",
     "        \n",
     "        return json.dumps({'stemmed': stemmed})\n",
     "    else:\n",
@@ -96,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
