index with tfidf tested localy, woks strage

--- a/search.ipynb
+++ b/search.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-27T11:33:05.188757Z",
-     "start_time": "2018-11-27T11:00:13.690612Z"
+     "start_time": "2018-12-02T17:51:38.443Z"
     },
     "scrolled": true
    },
@@ -27,94 +26,15 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [27/Nov/2018 13:00:23] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:00:25] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:00:32] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:02:02] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:02:32] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:02:49] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:25:31] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "[2018-11-27 13:26:06,323] ERROR in app: Exception on /search [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-1-b28252fefcc8>\", line 37, in search\n",
-      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
-      "    json=json).text)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
-      "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
-      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
-      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
-      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [27/Nov/2018 13:26:06] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "[2018-11-27 13:26:10,115] ERROR in app: Exception on /search [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-1-b28252fefcc8>\", line 37, in search\n",
-      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
-      "    json=json).text)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
-      "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
-      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
-      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
-      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [27/Nov/2018 13:26:10] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "[2018-11-27 13:28:03,081] ERROR in app: Exception on /search [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-1-b28252fefcc8>\", line 37, in search\n",
-      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
-      "    json=json).text)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
-      "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
-      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
-      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
-      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [27/Nov/2018 13:28:03] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:29:22] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:32:25] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:32:35] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [02/Dec/2018 20:43:23] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/Dec/2018 20:43:37] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/Dec/2018 21:06:05] \"\u001b[37mGET /? HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/Dec/2018 21:06:09] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/Dec/2018 21:06:13] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/Dec/2018 21:06:16] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/Dec/2018 00:42:36] \"\u001b[37mGET /? HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/Dec/2018 00:42:41] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/Dec/2018 00:42:51] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
