--- a/updater.ipynb
+++ b/updater.ipynb
@@ -61,11 +61,8 @@
     "        r_analyzing_docs = post_request(ANALYZER_PORT, ANALYZER_PATH, analyze_json)\n",
     "        stemmed_docs = r_analyzing_docs['stemmed_docs']\n",
     "        langs = r_analyzing_docs['langs']\n",
-    "        \n",
-    "        for doc, stemmed in zip(docs, stemmed_docs):\n",
-    "            doc['stemmed_text'] = stemmed\n",
     "            \n",
-    "        ids_of_updated = index.update_index(docs)\n",
+    "        ids_of_updated = index.update(docs, stemmed_docs)\n",
     "        \n",
     "        return json.dumps({'status':'ok', \"ids\": ids_of_updated})\n",
     "    else:\n",
