--- a/lang_detection.ipynb
+++ b/lang_detection.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-27T11:32:59.346724Z",
-     "start_time": "2018-11-27T11:00:03.937181Z"
+     "start_time": "2018-12-02T17:51:29.668Z"
     }
    },
    "outputs": [
@@ -26,17 +25,12 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13567/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [27/Nov/2018 13:00:32] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:02:02] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:02:32] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:02:49] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:25:31] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:26:06] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:26:10] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:28:03] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:29:22] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:32:25] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [27/Nov/2018 13:32:35] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [02/Dec/2018 20:43:35] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/Dec/2018 21:06:09] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/Dec/2018 21:06:13] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [02/Dec/2018 21:06:16] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/Dec/2018 00:42:41] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/Dec/2018 00:42:51] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -86,6 +80,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
